# kvm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ANALYSIS_AND_RECOMMENDATIONS.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_ENHANCEMENTS.md  docker-compose.yml  execution_plan.md  pyproject.toml
.agent/: project_context.md  rules.md
.github/workflows/: ci.yml
.kiro/: README.md
data/: physical_deployment.ttl
docs/adr/: 0001-smart-and-safe-linting.md
ontology/: architectural_shapes.shacl.ttl  architectural_standards.ttl  hardware_ontology.ttl  system_constraints.shacl.ttl
src/nkllon/: __init__.py  cli.py  config.py  diff.py  exceptions.py  query.py  reporters.py  validate.py  visualize.py
tests/: test_validation.py
