[project]
name = "nkllon-topology"
version = "0.1.0"
description = "Semantic web hardware topology validation system for KVM setups"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyshacl>=0.25.0",
    "rdflib>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
nkllon = "nkllon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nkllon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Smart & Safe Strategy:
# - Select "F" (Pyflakes) for logical errors.
# - Select "I" (Isort) for auto-sorted imports.
# - Do NOT select "E" (Style) - let the formatter handle it.
select = ["F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
